set(BASE_DIR        "mednafen")
set(SRC_DIR         "${BASE_DIR}/src")
set(INCLUDE_DIR     "${BASE_DIR}/include")

set(INCLUDE_PATHS
    "${INCLUDE_DIR}"
)

set(EXPORTED_INCLUDE_PATHS
    "${INCLUDE_DIR}"
)

# Platform agnostic sources
set(SOURCE_FILES
    "${INCLUDE_DIR}/mednafen/AtomicFIFO.h"
    "${INCLUDE_DIR}/mednafen/cdrom/CDAccess.h"
    "${INCLUDE_DIR}/mednafen/cdrom/CDInterface.h"
    "${INCLUDE_DIR}/mednafen/cdrom/CDUtility.h"
    "${INCLUDE_DIR}/mednafen/cdrom/SimpleFIFO.h"
    "${INCLUDE_DIR}/mednafen/cheat_formats/psx.h"
    "${INCLUDE_DIR}/mednafen/compress/GZFileStream.h"
    "${INCLUDE_DIR}/mednafen/compress/ZIPReader.h"
    "${INCLUDE_DIR}/mednafen/compress/ZLInflateFilter.h"
    "${INCLUDE_DIR}/mednafen/cputest/cputest.h"
    "${INCLUDE_DIR}/mednafen/driver.h"
    "${INCLUDE_DIR}/mednafen/endian.h"
    "${INCLUDE_DIR}/mednafen/error.h"
    "${INCLUDE_DIR}/mednafen/file.h"
    "${INCLUDE_DIR}/mednafen/FileStream.h"
    "${INCLUDE_DIR}/mednafen/general.h"
    "${INCLUDE_DIR}/mednafen/git.h"
    "${INCLUDE_DIR}/mednafen/hash/crc.h"
    "${INCLUDE_DIR}/mednafen/hash/md5.h"
    "${INCLUDE_DIR}/mednafen/hash/sha1.h"
    "${INCLUDE_DIR}/mednafen/hash/sha256.h"
    "${INCLUDE_DIR}/mednafen/IPSPatcher.h"
    "${INCLUDE_DIR}/mednafen/math_ops.h"
    "${INCLUDE_DIR}/mednafen/mednafen-driver.h"
    "${INCLUDE_DIR}/mednafen/mednafen.h"
    "${INCLUDE_DIR}/mednafen/memory.h"
    "${INCLUDE_DIR}/mednafen/MemoryStream.h"
    "${INCLUDE_DIR}/mednafen/mempatcher-driver.h"
    "${INCLUDE_DIR}/mednafen/mempatcher.h"
    "${INCLUDE_DIR}/mednafen/movie-driver.h"
    "${INCLUDE_DIR}/mednafen/MThreading.h"
    "${INCLUDE_DIR}/mednafen/NativeVFS.h"
    "${INCLUDE_DIR}/mednafen/net/Net.h"
    "${INCLUDE_DIR}/mednafen/netplay-driver.h"
    "${INCLUDE_DIR}/mednafen/player.h"
    "${INCLUDE_DIR}/mednafen/PSFLoader.h"
    "${INCLUDE_DIR}/mednafen/psx/psx.h"
    "${INCLUDE_DIR}/mednafen/qtrecord.h"
    "${INCLUDE_DIR}/mednafen/quicklz/quicklz.h"
    "${INCLUDE_DIR}/mednafen/resampler/resampler.h"
    "${INCLUDE_DIR}/mednafen/settings-common.h"
    "${INCLUDE_DIR}/mednafen/settings-driver.h"
    "${INCLUDE_DIR}/mednafen/settings.h"
    "${INCLUDE_DIR}/mednafen/sexyal/convert.h"
    "${INCLUDE_DIR}/mednafen/sexyal/sexyal.h"
    "${INCLUDE_DIR}/mednafen/SimpleBitset.h"
    "${INCLUDE_DIR}/mednafen/sound/fir_blargg_common.h"
    "${INCLUDE_DIR}/mednafen/sound/fir_blargg_config.h"
    "${INCLUDE_DIR}/mednafen/sound/Fir_Resampler.h"
    "${INCLUDE_DIR}/mednafen/sound/OwlResampler.h"
    "${INCLUDE_DIR}/mednafen/sound/SwiftResampler.h"
    "${INCLUDE_DIR}/mednafen/sound/WAVRecord.h"
    "${INCLUDE_DIR}/mednafen/state-common.h"
    "${INCLUDE_DIR}/mednafen/state-driver.h"
    "${INCLUDE_DIR}/mednafen/state.h"
    "${INCLUDE_DIR}/mednafen/Stream.h"
    "${INCLUDE_DIR}/mednafen/string/escape.h"
    "${INCLUDE_DIR}/mednafen/string/string.h"
    "${INCLUDE_DIR}/mednafen/tests.h"
    "${INCLUDE_DIR}/mednafen/time.h"
    "${INCLUDE_DIR}/mednafen/types.h"
    "${INCLUDE_DIR}/mednafen/video-driver.h"
    "${INCLUDE_DIR}/mednafen/video.h"
    "${INCLUDE_DIR}/mednafen/video/primitives.h"
    "${INCLUDE_DIR}/mednafen/video/surface.h"
    "${INCLUDE_DIR}/mednafen/video/text.h"
    "${INCLUDE_DIR}/mednafen/VirtualFS.h"
    "${INCLUDE_DIR}/mednafen/win32-common.h"
    "${INCLUDE_DIR}/minilzo/minilzo.h"
    "${INCLUDE_DIR}/trio/trio.h"
    "${INCLUDE_DIR}/trio/triodef.h"
    "${INCLUDE_DIR}/trio/trionan.h"
    "${INCLUDE_DIR}/trio/triop.h"
    "${INCLUDE_DIR}/trio/triostr.h"
    "${SRC_DIR}/cdplay/cdplay.cpp"
    "${SRC_DIR}/cdrom/CDAccess.cpp"
    "${SRC_DIR}/cdrom/CDAccess_CCD.cpp"
    "${SRC_DIR}/cdrom/CDAccess_CCD.h"
    "${SRC_DIR}/cdrom/CDAccess_Image.cpp"
    "${SRC_DIR}/cdrom/CDAccess_Image.h"
    "${SRC_DIR}/cdrom/CDAFReader.cpp"
    "${SRC_DIR}/cdrom/CDAFReader.h"
    "${SRC_DIR}/cdrom/CDInterface.cpp"
    "${SRC_DIR}/cdrom/CDInterface_MT.cpp"
    "${SRC_DIR}/cdrom/CDInterface_MT.h"
    "${SRC_DIR}/cdrom/CDInterface_ST.cpp"
    "${SRC_DIR}/cdrom/CDInterface_ST.h"
    "${SRC_DIR}/cdrom/CDUtility.cpp"
    "${SRC_DIR}/cdrom/crc32.cpp"
    "${SRC_DIR}/cdrom/dvdisaster.h"
    "${SRC_DIR}/cdrom/galois-inlines.h"
    "${SRC_DIR}/cdrom/galois.cpp"
    "${SRC_DIR}/cdrom/l-ec.cpp"
    "${SRC_DIR}/cdrom/lec.cpp"
    "${SRC_DIR}/cdrom/lec.h"
    "${SRC_DIR}/cdrom/recover-raw.cpp"
    "${SRC_DIR}/cdrom/scsicd-pce-commands.inc"
    "${SRC_DIR}/cdrom/scsicd.cpp"
    "${SRC_DIR}/cdrom/scsicd.h"
    "${SRC_DIR}/cdrom/scsicd_cdda_filter.inc"
    "${SRC_DIR}/cheat_formats/psx.cpp"
    "${SRC_DIR}/compress/GZFileStream.cpp"
    "${SRC_DIR}/compress/ZIPReader.cpp"
    "${SRC_DIR}/compress/ZLInflateFilter.cpp"
    "${SRC_DIR}/cputest/cputest.c"
    "${SRC_DIR}/debug.cpp"
    "${SRC_DIR}/debug.h"
    "${SRC_DIR}/demo/demo.cpp"
    "${SRC_DIR}/drivers/2xSaI.cpp"
    "${SRC_DIR}/drivers/2xSaI.h"
    "${SRC_DIR}/drivers/args.cpp"
    "${SRC_DIR}/drivers/args.h"
    "${SRC_DIR}/drivers/cheat.cpp"
    "${SRC_DIR}/drivers/cheat.h"
    "${SRC_DIR}/drivers/console.cpp"
    "${SRC_DIR}/drivers/console.h"
    "${SRC_DIR}/drivers/debugger.cpp"
    "${SRC_DIR}/drivers/debugger.h"
    "${SRC_DIR}/drivers/ers.cpp"
    "${SRC_DIR}/drivers/ers.h"
    "${SRC_DIR}/drivers/fps.cpp"
    "${SRC_DIR}/drivers/fps.cpp"
    "${SRC_DIR}/drivers/fps.h"
    "${SRC_DIR}/drivers/fps.h"
    "${SRC_DIR}/drivers/help.cpp"
    "${SRC_DIR}/drivers/help.h"
    "${SRC_DIR}/drivers/hq2x.cpp"
    "${SRC_DIR}/drivers/hq3x.cpp"
    "${SRC_DIR}/drivers/hq4x.cpp"
    "${SRC_DIR}/drivers/hqxx-common.cpp"
    "${SRC_DIR}/drivers/hqxx-common.h"
    "${SRC_DIR}/drivers/icon.h"
    "${SRC_DIR}/drivers/input-default-buttons.h"
    "${SRC_DIR}/drivers/input.cpp"
    "${SRC_DIR}/drivers/input.h"
    "${SRC_DIR}/drivers/Joystick.cpp"
    "${SRC_DIR}/drivers/Joystick.h"
    "${SRC_DIR}/drivers/keyboard.cpp"
    "${SRC_DIR}/drivers/keyboard.h"
    "${SRC_DIR}/drivers/keyboard_scancodes.h"
    "${SRC_DIR}/drivers/main.cpp"
    "${SRC_DIR}/drivers/mouse.cpp"
    "${SRC_DIR}/drivers/mouse.h"
    "${SRC_DIR}/drivers/netplay.cpp"
    "${SRC_DIR}/drivers/netplay.h"
    "${SRC_DIR}/drivers/nnx.cpp"
    "${SRC_DIR}/drivers/nnx.h"
    "${SRC_DIR}/drivers/nongl.cpp"
    "${SRC_DIR}/drivers/nongl.h"
    "${SRC_DIR}/drivers/opengl.cpp"
    "${SRC_DIR}/drivers/opengl.h"
    "${SRC_DIR}/drivers/remote.cpp"
    "${SRC_DIR}/drivers/remote.h"
    "${SRC_DIR}/drivers/rmdui.cpp"
    "${SRC_DIR}/drivers/rmdui.h"
    "${SRC_DIR}/drivers/scale2x.c"
    "${SRC_DIR}/drivers/scale2x.h"
    "${SRC_DIR}/drivers/scale3x.c"
    "${SRC_DIR}/drivers/scale3x.h"
    "${SRC_DIR}/drivers/scalebit.c"
    "${SRC_DIR}/drivers/scalebit.h"
    "${SRC_DIR}/drivers/shader.cpp"
    "${SRC_DIR}/drivers/shader.h"
    "${SRC_DIR}/drivers/shader_sabr.inc"
    "${SRC_DIR}/drivers/shader_scale2x.inc"
    "${SRC_DIR}/drivers/sound.cpp"
    "${SRC_DIR}/drivers/sound.h"
    "${SRC_DIR}/drivers/video-state.cpp"
    "${SRC_DIR}/drivers/video-state.h"
    "${SRC_DIR}/drivers/video.cpp"
    "${SRC_DIR}/drivers/video.h"
    "${SRC_DIR}/endian.cpp"
    "${SRC_DIR}/error.cpp"
    "${SRC_DIR}/ExtMemStream.cpp"
    "${SRC_DIR}/ExtMemStream.h"
    "${SRC_DIR}/file.cpp"
    "${SRC_DIR}/FileStream.cpp"
    "${SRC_DIR}/general.cpp"
    "${SRC_DIR}/gettext.h"
    "${SRC_DIR}/git.cpp"
    "${SRC_DIR}/hash/crc.cpp"
    "${SRC_DIR}/hash/md5.cpp"
    "${SRC_DIR}/hash/sha1.cpp"
    "${SRC_DIR}/hash/sha256.cpp"
    "${SRC_DIR}/IPSPatcher.cpp"
    "${SRC_DIR}/lepacker.h"
    "${SRC_DIR}/mednafen.cpp"
    "${SRC_DIR}/memory.cpp"
    "${SRC_DIR}/MemoryStream.cpp"
    "${SRC_DIR}/mempatcher.cpp"
    "${SRC_DIR}/minilzo/minilzo.c"
    "${SRC_DIR}/movie.cpp"
    "${SRC_DIR}/movie.h"
    "${SRC_DIR}/NativeVFS.cpp"
    "${SRC_DIR}/net/Net.cpp"
    "${SRC_DIR}/netplay.cpp"
    "${SRC_DIR}/netplay.h"
    "${SRC_DIR}/player.cpp"
    "${SRC_DIR}/PSFLoader.cpp"
    "${SRC_DIR}/psx/cdc.cpp"
    "${SRC_DIR}/psx/cdc.h"
    "${SRC_DIR}/psx/cpu.cpp"
    "${SRC_DIR}/psx/cpu.h"
    "${SRC_DIR}/psx/debug.cpp"
    "${SRC_DIR}/psx/debug.h"
    "${SRC_DIR}/psx/dis.cpp"
    "${SRC_DIR}/psx/dis.h"
    "${SRC_DIR}/psx/dma.cpp"
    "${SRC_DIR}/psx/dma.h"
    "${SRC_DIR}/psx/FastFIFO.h"
    "${SRC_DIR}/psx/frontio.cpp"
    "${SRC_DIR}/psx/frontio.h"
    "${SRC_DIR}/psx/gpu.cpp"
    "${SRC_DIR}/psx/gpu.h"
    "${SRC_DIR}/psx/gpu_common.inc"
    "${SRC_DIR}/psx/gpu_line.cpp"
    "${SRC_DIR}/psx/gpu_polygon.cpp"
    "${SRC_DIR}/psx/gpu_sprite.cpp"
    "${SRC_DIR}/psx/gte.cpp"
    "${SRC_DIR}/psx/gte.h"
    "${SRC_DIR}/psx/input"
    "${SRC_DIR}/psx/input/dualanalog.cpp"
    "${SRC_DIR}/psx/input/dualanalog.h"
    "${SRC_DIR}/psx/input/dualshock.cpp"
    "${SRC_DIR}/psx/input/dualshock.h"
    "${SRC_DIR}/psx/input/gamepad.cpp"
    "${SRC_DIR}/psx/input/gamepad.h"
    "${SRC_DIR}/psx/input/guncon.cpp"
    "${SRC_DIR}/psx/input/guncon.h"
    "${SRC_DIR}/psx/input/justifier.cpp"
    "${SRC_DIR}/psx/input/justifier.h"
    "${SRC_DIR}/psx/input/memcard.cpp"
    "${SRC_DIR}/psx/input/memcard.h"
    "${SRC_DIR}/psx/input/mouse.cpp"
    "${SRC_DIR}/psx/input/mouse.h"
    "${SRC_DIR}/psx/input/multitap.cpp"
    "${SRC_DIR}/psx/input/multitap.h"
    "${SRC_DIR}/psx/input/negcon.cpp"
    "${SRC_DIR}/psx/input/negcon.h"
    "${SRC_DIR}/psx/irq.cpp"
    "${SRC_DIR}/psx/irq.h"
    "${SRC_DIR}/psx/masmem.h"
    "${SRC_DIR}/psx/mdec.cpp"
    "${SRC_DIR}/psx/mdec.h"
    "${SRC_DIR}/psx/psx.cpp"
    "${SRC_DIR}/psx/psx.h"
    "${SRC_DIR}/psx/sio.cpp"
    "${SRC_DIR}/psx/sio.h"
    "${SRC_DIR}/psx/spu.cpp"
    "${SRC_DIR}/psx/spu.h"
    "${SRC_DIR}/psx/spu_fir_table.inc"
    "${SRC_DIR}/psx/spu_reverb.inc"
    "${SRC_DIR}/psx/timer.cpp"
    "${SRC_DIR}/psx/timer.h"
    "${SRC_DIR}/qtrecord.cpp"
    "${SRC_DIR}/quicklz/quicklz.c"
    "${SRC_DIR}/resampler/arch.h"
    "${SRC_DIR}/resampler/fixed_generic.h"
    "${SRC_DIR}/resampler/resample.c"
    "${SRC_DIR}/resampler/resample_sse.h"
    "${SRC_DIR}/resampler/stack_alloc.h"
    "${SRC_DIR}/settings.cpp"
    "${SRC_DIR}/sexyal/convert.cpp"
    "${SRC_DIR}/sexyal/drivers/dummy.cpp"
    "${SRC_DIR}/sexyal/sexyal.cpp"
    "${SRC_DIR}/sound/Blip_Buffer.cpp"
    "${SRC_DIR}/sound/Blip_Buffer.h"
    "${SRC_DIR}/sound/DSPUtility.cpp"
    "${SRC_DIR}/sound/DSPUtility.h"
    "${SRC_DIR}/sound/fir_blargg_endian.h"
    "${SRC_DIR}/sound/fir_blargg_source.h"
    "${SRC_DIR}/sound/Fir_Resampler.cpp"
    "${SRC_DIR}/sound/okiadpcm-deltatable.h"
    "${SRC_DIR}/sound/okiadpcm.cpp"
    "${SRC_DIR}/sound/okiadpcm.h"
    "${SRC_DIR}/sound/okiadpcm_generate.cpp"
    "${SRC_DIR}/sound/OwlResampler.cpp"
    "${SRC_DIR}/sound/Stereo_Buffer.cpp"
    "${SRC_DIR}/sound/Stereo_Buffer.h"
    "${SRC_DIR}/sound/SwiftResampler.cpp"
    "${SRC_DIR}/sound/WAVRecord.cpp"
    "${SRC_DIR}/state.cpp"
    "${SRC_DIR}/state_rewind.cpp"
    "${SRC_DIR}/state_rewind.h"
    "${SRC_DIR}/Stream.cpp"
    "${SRC_DIR}/string/escape.cpp"
    "${SRC_DIR}/string/string.cpp"
    "${SRC_DIR}/tests.cpp"
    "${SRC_DIR}/Time.cpp"
    "${SRC_DIR}/trio/trio.c"
    "${SRC_DIR}/trio/trionan.c"
    "${SRC_DIR}/trio/triostr.c"
    "${SRC_DIR}/video/Deinterlacer.cpp"
    "${SRC_DIR}/video/Deinterlacer.h"
    "${SRC_DIR}/video/Deinterlacer_Blend.cpp"
    "${SRC_DIR}/video/Deinterlacer_Blend.h"
    "${SRC_DIR}/video/Deinterlacer_Simple.cpp"
    "${SRC_DIR}/video/Deinterlacer_Simple.h"
    "${SRC_DIR}/video/font-data-12x13.c"
    "${SRC_DIR}/video/font-data-18x18.c"
    "${SRC_DIR}/video/font-data.cpp"
    "${SRC_DIR}/video/font-data.h"
    "${SRC_DIR}/video/font12x13ja.h"
    "${SRC_DIR}/video/font18x18ko.h"
    "${SRC_DIR}/video/font5x7.h"
    "${SRC_DIR}/video/font6x12.h"
    "${SRC_DIR}/video/font6x13.h"
    "${SRC_DIR}/video/font6x9.h"
    "${SRC_DIR}/video/font9x18.h"
    "${SRC_DIR}/video/png.cpp"
    "${SRC_DIR}/video/png.h"
    "${SRC_DIR}/video/primitives.cpp"
    "${SRC_DIR}/video/resize.cpp"
    "${SRC_DIR}/video/resize.h"
    "${SRC_DIR}/video/surface.cpp"
    "${SRC_DIR}/video/tblur.cpp"
    "${SRC_DIR}/video/tblur.h"
    "${SRC_DIR}/video/text.cpp"
    "${SRC_DIR}/video/video-common.h"
    "${SRC_DIR}/video/video.cpp"
    "${SRC_DIR}/VirtualFS.cpp"
)

set(OTHER_FILES
)

# Platform specific sources
if (PLATFORM_WINDOWS)
    list(APPEND SOURCE_FILES 
        "${SRC_DIR}/drivers/Joystick_DX5.cpp"
        "${SRC_DIR}/drivers/Joystick_DX5.h"
        "${SRC_DIR}/drivers/Joystick_XInput.cpp"
        "${SRC_DIR}/drivers/Joystick_XInput.h"
        "${SRC_DIR}/mthreading/MThreading_Win32.cpp"
        "${SRC_DIR}/net/Net_WS2.cpp"
        "${SRC_DIR}/net/Net_WS2.h"
        "${SRC_DIR}/win32-common.cpp"
    )
endif()

if (PLATFORM_MAC OR PLATFORM_LINUX)
    list(APPEND SOURCE_FILES 
        "${SRC_DIR}/mthreading/MThreading_POSIX.cpp"
        "${SRC_DIR}/net/Net_POSIX.cpp"
        "${SRC_DIR}/net/Net_POSIX.h"
    )
endif()

# Generate the library
add_library(${MEDNAFEN_TGT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
setup_source_groups("${SOURCE_FILES}" "${OTHER_FILES}")

# Dependencies
target_link_libraries(${MEDNAFEN_TGT_NAME}
    ${ZLIB_TGT_NAME}
    ${LIBSDL_TGT_NAME}
)

# Setup include dirs
include_directories(${INCLUDE_PATHS})
target_include_directories(${MEDNAFEN_TGT_NAME} INTERFACE ${EXPORTED_INCLUDE_PATHS})

# Need to define endianess for mednafen.
# Assuming a little endian system for now, if we need to support big then this needs to change based on that.
target_compile_definitions(${MEDNAFEN_TGT_NAME} PUBLIC LSB_FIRST)

# Only need the playstation emulator
target_compile_definitions(${MEDNAFEN_TGT_NAME} PRIVATE WANT_PSX_EMU)

# Mednafen version info
target_compile_definitions(${MEDNAFEN_TGT_NAME} PRIVATE -DPACKAGE="mednafen")
target_compile_definitions(${MEDNAFEN_TGT_NAME} PUBLIC -DMEDNAFEN_VERSION="1.22.2")
target_compile_definitions(${MEDNAFEN_TGT_NAME} PUBLIC -DMEDNAFEN_VERSION_NUMERIC=0x00102202)

# Platform and compiler specific settings
if (COMPILER_MSVC)
    target_compile_options(${MEDNAFEN_TGT_NAME} PRIVATE /W1)    # Very limited set of warnings
endif()

if (PLATFORM_WINDOWS)
    target_compile_options(${MEDNAFEN_TGT_NAME} PUBLIC -DPSS_STYLE=2)   # Use back slash path separator
else()
    target_compile_options(${MEDNAFEN_TGT_NAME} PUBLIC -DPSS_STYLE=1)   # Use forward slash path separator
endif()
